preprocessed model data

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -581,104 +581,79 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import math\n",
     "\n",
-    "# Load the datasets\n",
-    "def load_data(file_path):\n",
-    "    return pd.read_csv(file_path)\n",
+    "# Load the processed DataFrame\n",
+    "df_processed = pd.read_csv('creditScoring/data/processed/processed.csv')\n",
     "\n",
     "# Overview of the Data\n",
-    "def data_overview(data):\n",
-    "    print(\"Dataset Overview:\")\n",
-    "    print(data.info())\n",
-    "    print(\"\\n\")\n",
+    "def data_overview(df):\n",
+    "    print(\"Overview of the Data:\")\n",
+    "    print(f\"Number of rows: {df.shape[0]}\")\n",
+    "    print(f\"Number of columns: {df.shape[1]}\")\n",
+    "    print(\"\\nData Types:\\n\", df.dtypes)\n",
     "\n",
     "# Summary Statistics\n",
-    "def summary_statistics(data):\n",
-    "    print(\"Summary Statistics:\")\n",
-    "    print(data.describe())\n",
-    "    print(\"\\n\")\n",
+    "def summary_statistics(df):\n",
+    "    print(\"\\nSummary Statistics:\")\n",
+    "    print(df.describe(include='all'))\n",
     "\n",
-    "def plot_numerical_distribution(data):\n",
-    "    # Convert object columns to numerical types\n",
-    "    numerical_features = data.select_dtypes(include=[np.number]).columns.tolist()\n",
-    "    object_to_numeric_cols = ['TransactionId', 'BatchId', 'AccountId', 'SubscriptionId', 'CustomerId', 'ProviderId', 'ProductId', 'ChannelId', 'TransactionStartTime']\n",
-    "    for col in object_to_numeric_cols:\n",
-    "        if col in data.columns:\n",
-    "            data[col] = pd.to_numeric(data[col], errors='coerce')\n",
-    "    \n",
-    "    numerical_features = data.select_dtypes(include=[np.number]).columns.tolist()\n",
-    "    print(f\"Numerical Features: {numerical_features}\")\n",
-    "    \n",
-    "    plt.figure(figsize=(20, 15))\n",
+    "# Distribution of Numerical Features\n",
+    "def numerical_feature_distribution(df):\n",
+    "    numerical_features = df.select_dtypes(include=['int64', 'float64']).columns\n",
+    "    num_features_count = len(numerical_features)\n",
+    "    rows = math.ceil(num_features_count / 3)\n",
+    "    plt.figure(figsize=(15, rows * 5))\n",
     "    for i, feature in enumerate(numerical_features):\n",
-    "        plt.subplot(5, 4, i + 1)\n",
-    "        sns.histplot(data=data[feature], kde=True, bins=30)\n",
+    "        plt.subplot(rows, 3, i + 1)\n",
+    "        sns.histplot(df[feature], bins=15, kde=True)\n",
     "        plt.title(f'Distribution of {feature}')\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
-    "\n",
-    "# Distribution of Numerical Features\n",
-    "def plot_numerical_distribution(data):\n",
-    "    numerical_features = data.select_dtypes(include=[np.number]).columns.tolist()\n",
-    "    for feature in numerical_features:\n",
-    "        sns.histplot(data=data[feature], kde=True, bins=30)\n",
+    "# Distribution of Categorical Features\n",
+    "def categorical_feature_distribution(df):\n",
+    "    categorical_features = df.select_dtypes(include=['object']).columns\n",
+    "    for feature in categorical_features:\n",
+    "        plt.figure(figsize=(10, 5))\n",
+    "        sns.countplot(y=feature, data=df, order=df[feature].value_counts().index)\n",
     "        plt.title(f'Distribution of {feature}')\n",
     "        plt.show()\n",
     "\n",
-    "\n",
     "# Correlation Analysis\n",
-    "def correlation_analysis(data):\n",
-    "    correlation_matrix = data.corr()\n",
-    "    sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm')\n",
+    "def correlation_analysis(df):\n",
+    "    correlation_matrix = df.corr()\n",
+    "    plt.figure(figsize=(15, 10))\n",
+    "    sns.heatmap(correlation_matrix, annot=True, fmt=\".2f\", cmap='coolwarm')\n",
     "    plt.title('Correlation Matrix')\n",
     "    plt.show()\n",
     "\n",
     "# Identifying Missing Values\n",
-    "def identify_missing_values(data):\n",
-    "    missing_values = data.isnull().sum()\n",
-    "    print(\"Missing Values:\")\n",
-    "    print(missing_values[missing_values > 0])\n",
-    "    print(\"\\n\")\n",
+    "def missing_values(df):\n",
+    "    print(\"\\nMissing Values:\")\n",
+    "    missing = df.isnull().sum()\n",
+    "    missing = missing[missing > 0]\n",
+    "    print(missing.sort_values(ascending=False))\n",
     "\n",
     "# Outlier Detection\n",
-    "def detect_outliers(data):\n",
-    "    numerical_features = data.select_dtypes(include=[np.number]).columns.tolist()\n",
+    "def outlier_detection(df):\n",
+    "    numerical_features = df.select_dtypes(include=['int64', 'float64']).columns\n",
     "    for feature in numerical_features:\n",
-    "        sns.boxplot(data[feature])\n",
-    "        plt.title(f'Box plot of {feature}')\n",
+    "        plt.figure(figsize=(10, 5))\n",
+    "        sns.boxplot(x=df[feature])\n",
+    "        plt.title(f'Box Plot of {feature}')\n",
     "        plt.show()\n",
     "\n",
-    "def main():\n",
-    "    # Load datasets\n",
-    "    data = load_data('../../creditScoring/data/raw/data.csv')\n",
-    "    \n",
-    "    # 1. Overview of the Data\n",
-    "    data_overview(data)\n",
-    "    \n",
-    "    # 2. Summary Statistics\n",
-    "    summary_statistics(data)\n",
-    "    \n",
-    "    # 3. Distribution of Numerical Features\n",
-    "    plot_numerical_distribution(data)\n",
-    "    \n",
-    "    # 4. Distribution of Categorical Features\n",
-    "    plot_categorical_distribution(data)\n",
-    "    \n",
-    "    # 5. Correlation Analysis\n",
-    "    correlation_analysis(data)\n",
-    "    \n",
-    "    # 6. Identifying Missing Values\n",
-    "    identify_missing_values(data)\n",
-    "    \n",
-    "    # 7. Outlier Detection\n",
-    "    detect_outliers(data)\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
+    "# Perform EDA\n",
+    "data_overview(df_processed)\n",
+    "summary_statistics(df_processed)\n",
+    "numerical_feature_distribution(df_processed)\n",
+    "categorical_feature_distribution(df_processed)\n",
+    "correlation_analysis(df_processed)\n",
+    "missing_values(df_processed)\n",
+    "outlier_detection(df_processed)\n"
    ]
   },
   {
