WOE and Iv added

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -11,12 +11,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"../../creditScoring/data/raw/data.csv\",low_memory=False)\n",
     "dataframe= pd.read_csv(\"../../creditScoring/data/raw/Xente_Variable_Definitions.csv\", low_memory=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "processed=pd.read_csv(\"/home/yadasa/Desktop/credit_scoring_model/creditScoring/data/processed/data_preprocessed.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TransactionId</th>\n",
+       "      <th>BatchId</th>\n",
+       "      <th>AccountId</th>\n",
+       "      <th>SubscriptionId</th>\n",
+       "      <th>CustomerId</th>\n",
+       "      <th>CurrencyCode</th>\n",
+       "      <th>CountryCode</th>\n",
+       "      <th>ProviderId</th>\n",
+       "      <th>ProductId</th>\n",
+       "      <th>ProductCategory</th>\n",
+       "      <th>...</th>\n",
+       "      <th>TransactionDay</th>\n",
+       "      <th>TransactionMonth</th>\n",
+       "      <th>TransactionYear</th>\n",
+       "      <th>CurrencyCode_WoE</th>\n",
+       "      <th>CountryCode_WoE</th>\n",
+       "      <th>ProviderId_WoE</th>\n",
+       "      <th>ProductId_WoE</th>\n",
+       "      <th>ProductCategory_WoE</th>\n",
+       "      <th>ChannelId_WoE</th>\n",
+       "      <th>PricingStrategy_WoE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TransactionId_76871</td>\n",
+       "      <td>BatchId_36123</td>\n",
+       "      <td>AccountId_3957</td>\n",
+       "      <td>SubscriptionId_887</td>\n",
+       "      <td>CustomerId_4406</td>\n",
+       "      <td>UGX</td>\n",
+       "      <td>256</td>\n",
+       "      <td>ProviderId_6</td>\n",
+       "      <td>ProductId_10</td>\n",
+       "      <td>airtime</td>\n",
+       "      <td>...</td>\n",
+       "      <td>15</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.137005</td>\n",
+       "      <td>1.645067</td>\n",
+       "      <td>1.620379</td>\n",
+       "      <td>-0.472374</td>\n",
+       "      <td>0.147797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TransactionId_73770</td>\n",
+       "      <td>BatchId_15642</td>\n",
+       "      <td>AccountId_4841</td>\n",
+       "      <td>SubscriptionId_3829</td>\n",
+       "      <td>CustomerId_4406</td>\n",
+       "      <td>UGX</td>\n",
+       "      <td>256</td>\n",
+       "      <td>ProviderId_4</td>\n",
+       "      <td>ProductId_6</td>\n",
+       "      <td>financial_services</td>\n",
+       "      <td>...</td>\n",
+       "      <td>15</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.736867</td>\n",
+       "      <td>4.189243</td>\n",
+       "      <td>-0.565446</td>\n",
+       "      <td>2.709038</td>\n",
+       "      <td>0.147797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>TransactionId_26203</td>\n",
+       "      <td>BatchId_53941</td>\n",
+       "      <td>AccountId_4229</td>\n",
+       "      <td>SubscriptionId_222</td>\n",
+       "      <td>CustomerId_4683</td>\n",
+       "      <td>UGX</td>\n",
+       "      <td>256</td>\n",
+       "      <td>ProviderId_6</td>\n",
+       "      <td>ProductId_1</td>\n",
+       "      <td>airtime</td>\n",
+       "      <td>...</td>\n",
+       "      <td>15</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.137005</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.620379</td>\n",
+       "      <td>-0.472374</td>\n",
+       "      <td>0.147797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>TransactionId_380</td>\n",
+       "      <td>BatchId_102363</td>\n",
+       "      <td>AccountId_648</td>\n",
+       "      <td>SubscriptionId_2185</td>\n",
+       "      <td>CustomerId_988</td>\n",
+       "      <td>UGX</td>\n",
+       "      <td>256</td>\n",
+       "      <td>ProviderId_1</td>\n",
+       "      <td>ProductId_21</td>\n",
+       "      <td>utility_bill</td>\n",
+       "      <td>...</td>\n",
+       "      <td>15</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.618899</td>\n",
+       "      <td>-0.271621</td>\n",
+       "      <td>-1.134962</td>\n",
+       "      <td>-0.472374</td>\n",
+       "      <td>0.147797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TransactionId_28195</td>\n",
+       "      <td>BatchId_38780</td>\n",
+       "      <td>AccountId_4841</td>\n",
+       "      <td>SubscriptionId_3829</td>\n",
+       "      <td>CustomerId_988</td>\n",
+       "      <td>UGX</td>\n",
+       "      <td>256</td>\n",
+       "      <td>ProviderId_4</td>\n",
+       "      <td>ProductId_6</td>\n",
+       "      <td>financial_services</td>\n",
+       "      <td>...</td>\n",
+       "      <td>15</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.736867</td>\n",
+       "      <td>4.189243</td>\n",
+       "      <td>-0.565446</td>\n",
+       "      <td>2.709038</td>\n",
+       "      <td>0.147797</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         TransactionId         BatchId       AccountId       SubscriptionId  \\\n",
+       "0  TransactionId_76871   BatchId_36123  AccountId_3957   SubscriptionId_887   \n",
+       "1  TransactionId_73770   BatchId_15642  AccountId_4841  SubscriptionId_3829   \n",
+       "2  TransactionId_26203   BatchId_53941  AccountId_4229   SubscriptionId_222   \n",
+       "3    TransactionId_380  BatchId_102363   AccountId_648  SubscriptionId_2185   \n",
+       "4  TransactionId_28195   BatchId_38780  AccountId_4841  SubscriptionId_3829   \n",
+       "\n",
+       "        CustomerId CurrencyCode  CountryCode    ProviderId     ProductId  \\\n",
+       "0  CustomerId_4406          UGX          256  ProviderId_6  ProductId_10   \n",
+       "1  CustomerId_4406          UGX          256  ProviderId_4   ProductId_6   \n",
+       "2  CustomerId_4683          UGX          256  ProviderId_6   ProductId_1   \n",
+       "3   CustomerId_988          UGX          256  ProviderId_1  ProductId_21   \n",
+       "4   CustomerId_988          UGX          256  ProviderId_4   ProductId_6   \n",
+       "\n",
+       "      ProductCategory  ... TransactionDay  TransactionMonth  TransactionYear  \\\n",
+       "0             airtime  ...             15                11             2018   \n",
+       "1  financial_services  ...             15                11             2018   \n",
+       "2             airtime  ...             15                11             2018   \n",
+       "3        utility_bill  ...             15                11             2018   \n",
+       "4  financial_services  ...             15                11             2018   \n",
+       "\n",
+       "  CurrencyCode_WoE  CountryCode_WoE  ProviderId_WoE  ProductId_WoE  \\\n",
+       "0              0.0              0.0        3.137005       1.645067   \n",
+       "1              0.0              0.0        2.736867       4.189243   \n",
+       "2              0.0              0.0        3.137005       0.000000   \n",
+       "3              0.0              0.0       -1.618899      -0.271621   \n",
+       "4              0.0              0.0        2.736867       4.189243   \n",
+       "\n",
+       "   ProductCategory_WoE  ChannelId_WoE  PricingStrategy_WoE  \n",
+       "0             1.620379      -0.472374             0.147797  \n",
+       "1            -0.565446       2.709038             0.147797  \n",
+       "2             1.620379      -0.472374             0.147797  \n",
+       "3            -1.134962      -0.472374             0.147797  \n",
+       "4            -0.565446       2.709038             0.147797  \n",
+       "\n",
+       "[5 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "processed.head()"
    ]
   },
   {
